Set disply to none instead of hiding return button to prevent spacing when hidden

--- a/public-transport-tracker-ng/src/styles.css
+++ b/public-transport-tracker-ng/src/styles.css
@@ -329,7 +329,7 @@ app-nearby-trips {
     }
 
     .return-button {
-        visibility: hidden;
+        display: none;
     }
 }
 
